--- a/ShareBooksSystem/web/bookUser/css/mycss.css
+++ b/ShareBooksSystem/web/bookUser/css/mycss.css
@@ -7,7 +7,9 @@
     padding-bottom: 20px;
     position: relative;
     flex-direction: row;
-    display: block;
+    display: flex;
+
+
 }
 .bookImg{
     width: 144px;
@@ -30,8 +32,93 @@
 }
 .bookInfo{
     position: relative;
-    float: left;
+    /*float: left;*/
     width: 560px;
+    display: flex;
+    flex-direction: column;
+    left:20px;
+    align-content: center;
     /*margin-top: 20px;*/
 }
+.bookTodo{
+    width: 560px;
+    /*height:36px;*/
 
+}
+.bookName{
+    /* align-self: center; */
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*float: left;*/
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*justify-content: flex-start;*/
+    /*align-items: center;*/
+    width: 560px;
+    height: 38px;
+    /* padding-bottom: 5; */
+}
+.bookName em{
+    display: inline-block;
+    /* height:37px; */
+    /*float: left;*/
+    line-height: 38px;
+}
+.bookName span{
+    display: inline-block;
+    text-align: center;
+    font-size: 18px;
+
+    /*position: relative;*/
+    /*margin : 20px;*/
+}
+/*.bookName h2{*/
+    /*!*display: inline-block;*!*/
+    /*!*height:30px ;*!*/
+    /*float: left;*/
+    /*text-align: center;*/
+
+/*}*/
+/*.bookName p{*/
+    /*float: left;*/
+    /*text-align: center;*/
+    /*line-height: 20px;*/
+ /*}*/
+
+.borrowBook{
+    display: inline-block;
+    border: 1px solid #bf2c24;
+    text-align: center;
+    background:#bf2c24;
+    width: 120px;
+    height: 34px;
+    color: #fff;
+    vertical-align: middle;
+    font-size: 14px;
+    /*text-align: center;*/
+    line-height: 28px;
+    margin-right:20px;
+}
+.borrowBook:hover{
+    color: #fff;
+    border-color: #ed4259;
+    background:#ed4259;
+}
+.addInCar{
+    display: inline-block;
+    border:1px solid #3f5a93;
+    color: #3f5a93;
+    text-align: center;
+    width: 120px;
+    height: 34px;
+    text-decoration: none;
+    vertical-align: middle;
+    font-size: 14px;
+    line-height: 28px;
+    margin-right: 20px;
+}
+.addInCar:hover{
+    color: #2972cc;
+    border-color: #2972cc;
+    background:#f0f5ff;
+}
