--- a/ShareBooksSystem/web/bookUser/css/showBooks.css
+++ b/ShareBooksSystem/web/bookUser/css/showBooks.css
@@ -1,4 +1,94 @@
 .oneBook{
-    width: 298px;
-    height: 349px;
+    width: 300px;
+    height: 346px;
+}
+.toBook{
+    width: 300px;
+    height: 346px;
+}
+.bookImg img{
+    width: 280px;
+    height:232px;
+    transition: all 0.5s;
+}
+.bookImg img:hover{
+    transform: scale(1.1);
+
+}
+.bookImg{
+    width: 280px;
+    height:232px;
+    margin: 10px 10px;
+    overflow: hidden;
+}
+.bookInfo{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 274px;
+
+ }
+.bookName{
+    width: 274px;
+    height: 42px;
+    display: block;
+}
+.bookName img{
+    width: 34px;
+    height: 34px;
+}
+.bookAuthor{
+    font-size: 12px;
+    line-height: 16px;
+    margin: 0;
+}
+.realBookName{
+    color: #424034;
+    height: 16px;
+    line-height: 16px;
+    overflow: hidden;
+    font-size: 14px;
+    margin: 0;
+}
+.bookNameLeft{
+    float: left;
+}
+.bookNameRight{
+    float: left;
+}
+.bookCategory{
+    color: #434341;
+    font-size: 12px;
+    line-height: 32px;
+    width: 274px;
+    height: 32px;
+    margin: 0;
+}
+.bookBottom{
+    display: flex;
+    flex-direction: row;
+}
+.bookBottom span{
+    color: #b2b1b1;
+    font-size: 12px;
+    margin-right: 5px;
+    text-align: center;
+    line-height: 22px;
+}
+/*.bookBottom img{*/
+    /*width: 25px;*/
+    /*height: 25px;*/
+/*}*/
+.eyeTimes{
+    width: 25px;
+    height: 25px;
+    margin-right: 5px;
+
+}
+.comment{
+    width: 25px;
+    height: 25px;
+    position: relative;
+    /*left: 10px;*/
+    margin-right: 5px;
 }
