--- a/ShareBooksSystem/web/bookUser/css/myBorrowCar.css
+++ b/ShareBooksSystem/web/bookUser/css/myBorrowCar.css
@@ -1,29 +1,30 @@
+.toBook{
+    color: #000;
+}
 .mycard{
-    width: 954px;
-    height: 188px;
+    width: 990px;
+    height: 232px;
     padding-top: 20px;
-    /*padding-left: 20px;*/
-    /*margin-bottom: 20px;*/
-    /*padding-bottom: 20px;*/
+    padding-left: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
     position: relative;
     flex-direction: row;
     display: flex;
-    margin: 0 auto;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 1px solid;
-
+    border: 1px solid transparent;
+    border-image: linear-gradient(to bottom, #a6a6a6, white);
+    border-image-slice: 10;
+    /* border: 1px solid #a6a6a6; */
+    border-bottom: white;
 
 }
 .bookImg{
-    width: 102px;
-    height: 136px;
+    width: 144px;
+    height: 192px;
     display: inline;
     float: left;
-    overflow: hidden;
     /*position: relative;*/
-    /*overflow: hidden;*/
+    overflow: hidden;
 
 }
 .bookImg img{
@@ -38,30 +39,26 @@
     transition: all 0.5s;
 }
 .bookImg img:hover{
-    /*width: 110%;*/
-    /*height: 110%;*/
-    overflow: hidden;
-    /* margin: 0 auto; */
-    /*left: -5%;*/
-    /*top: -5%;*/
     transform: scale(1.1);
-
+    overflow: hidden;
 }
+
 .bookInfo{
     position: relative;
     /*float: left;*/
     width: 560px;
     display: flex;
     flex-direction: column;
-    padding-top: 0;
     left:20px;
     align-content: center;
     /*margin-top: 20px;*/
 }
+.bookInfo p{
+    margin-bottom: 13px;
+}
 .bookTodo{
-    width: 224px;
-    height: 167px;
-    margin-left: 67px;
+    width: 560px;
+    /*height:36px;*/
 
 }
 .bookName{
@@ -73,34 +70,25 @@
     /*flex-direction: row;*/
     /*justify-content: flex-start;*/
     /*align-items: center;*/
-    width: 560px;
-    padding-top: 0;
-    height: 30px;
+    width: 641px;
+    height: 38px;
     /* padding-bottom: 5; */
-}
-.toBook{
-    color: #000;
 }
 .bookName em{
     display: block;
-    margin-top: 0;
+    /* height: 37px; */
+    /* float: left; */
+    font: 700 28px/38px PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
     float: left;
-    font-style: normal;
-    /* height:37px; */
-    /*float: left;*/
-    font-size: 18px;
-    line-height: 30px;
 }
 .bookName span{
-    display: block;
+    display: inline-block;
+    margin-left: 17px;
+    margin-top: 15px;
     text-align: center;
     font-size: 16px;
-    /* line-height: 19; */
     /* position: relative; */
-    margin-top: 10px;
-    margin-left: 10px;
-    float: left;
-
+    /* margin: 20px; */
     /*position: relative;*/
     /*margin : 20px;*/
 }
@@ -121,22 +109,21 @@
     display: inline-block;
     border: 1px solid #bf2c24;
     text-align: center;
-    background: #bf2c24;
+    background:#bf2c24;
     width: 120px;
     height: 34px;
     color: #fff;
     vertical-align: middle;
     font-size: 14px;
-    /* text-align: center; */
+    /*text-align: center;*/
     line-height: 28px;
-    /* margin-right: 20px; */
-    float: right;
-    margin-top: 105px;
+    margin-right:20px;
 }
 .borrowBook:hover{
     color: #fff;
     border-color: #ed4259;
     background:#ed4259;
+    text-decoration: none;
 }
 .addInCar{
     display: inline-block;
@@ -155,18 +142,19 @@
     color: #2972cc;
     border-color: #2972cc;
     background:#f0f5ff;
+    text-decoration: none;
 }
-.myPage{
-    border: 0px;
+.bookCommentSide{
+    margin-left: 139px;
+    margin-top: 30px;
 }
-.book-content{
-    margin: 0 auto;
-    width: 954px;
+.number{
+    font: 400 32px/38px FZZCYSK;
+    text-align: center;
 }
-.myNavPage{
-    float: right;
-    margin-top: 10px;
-}
+/*.myPage{*/
+/*border: 0px;*/
+/*}*/
 /*.myPage li{*/
 /*border: 0px;*/
 /*}*/
