--- a/ShareBooksSystem/web/bookUser/css/showBooks.css
+++ b/ShareBooksSystem/web/bookUser/css/showBooks.css
@@ -1,6 +1,18 @@
+.allBook{
+    flex-wrap: wrap;
+    display: flex;
+}
 .oneBook{
+
     width: 300px;
     height: 346px;
+    border: 1px solid white;
+    /*border-top: 0px;*/
+    /*border-right: 0px;*/
+    /*border-left: 0px;*/
+}
+.oneBook:hover{
+    border: 1px solid #313131;
 }
 .toBook{
     width: 300px;
@@ -9,7 +21,7 @@
 .bookImg img{
     width: 280px;
     height:232px;
-    transition: all 0.5s;
+    transition: all 0.7s;
 }
 .bookImg img:hover{
     transform: scale(1.1);
@@ -36,11 +48,17 @@
 .bookName img{
     width: 34px;
     height: 34px;
+    border-radius: 50%;
+    border: 0;
 }
 .bookAuthor{
     font-size: 12px;
     line-height: 16px;
     margin: 0;
+    color: #707070;
+    margin-top: 3px;
+    margin-left: 5px;
+    height: 16px;
 }
 .realBookName{
     color: #424034;
@@ -49,6 +67,7 @@
     overflow: hidden;
     font-size: 14px;
     margin: 0;
+    margin-left: 5px;
 }
 .bookNameLeft{
     float: left;
@@ -59,19 +78,21 @@
 .bookCategory{
     color: #434341;
     font-size: 12px;
-    line-height: 32px;
+    line-height: 21px;
     width: 274px;
-    height: 32px;
+    height: 21px;
     margin: 0;
 }
 .bookBottom{
     display: flex;
     flex-direction: row;
+    border-bottom: 1px solid #e5e5e5;
+    height: 31px;
 }
 .bookBottom span{
     color: #b2b1b1;
     font-size: 12px;
-    margin-right: 5px;
+    margin-right: 26px;
     text-align: center;
     line-height: 22px;
 }
