--- a/ShareBooksSystem/web/bookManagement/css/operator_main.css
+++ b/ShareBooksSystem/web/bookManagement/css/operator_main.css
@@ -1,7 +1,7 @@
 body{
-    top: 0;
-    margin: 0;
-}
+     top: 0;
+     margin: 0;
+ }
 
 #main{
     width: 30%;
@@ -9,4 +9,9 @@ body{
     position: relative;
     margin: 0 auto;
     margin-top: 20%;
+}
+
+#back{
+    margin-left: 599px;
+    margin-top: 30px;
 }
