--- a/ShareBooksSystem/web/bookUser/css/bookInfo.css
+++ b/ShareBooksSystem/web/bookUser/css/bookInfo.css
@@ -20,6 +20,7 @@
     margin-right: 16px;
     text-align: center;
     color: #ed4259;
+    font-size: 16px;
 }
 .bookSummaryRight{
     width: 114px;
@@ -30,6 +31,7 @@
     /* margin-left: 0px; */
     color: #a6a6a6;
     text-align: center;
+    font-size: 16px;
 }
 .bookSummaryRight a{
     color: #a6a6a6;
